--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {B.TECH. in Information Technology} % Degree
+    {Coimbatore Institute of engineering and Information Technology (Anna University)} % Institution
+    {Coimbatore, India} % Location
+    {Jun. 2006 - May. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {}
       \end{cvitems}
     }
 
